...
    <string name="filter_moods_by_time_title">Filter by time:</string>
    <string name="filter_moods_by_day">Past Day</string>
    <string name="filter_moods_by_week">Past week</string>
    <string name="filter_moods_by_month">Past month</string>
    <string name="filter_by_text_hint">Find text in moods</string>
    <string name="requests">Requests</string>
    <string name="find_people">People</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="remove">Remove</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="follow_request">requested to follow you</string>
    <string name="requested">Requested</string>
    <string name="no_follow_requests">You have no follow requests</string>
    <string name ="add_comment">Add a comment</string>
    <string name="i_am">I am</string>
    <string name="is">is</string>
    <string name="search_location">Search location</string>
    <string name="use_my_current_location">Use my current location</string>
...
