...
        android:text="@string/emoji_emotionless"
        android:textAlignment="center"
        android:textColor="@color/text_primary"
        android:textSize="120sp" />

    <TextView
        android:id="@+id/publicName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/text_primary"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/publicUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="TextView"
...
