<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.BaseUserListFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_margin="12dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">

        <SearchView
            android:theme="@style/ThemeOverlay.SearchView"
            android:id="@+id/user_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:closeIcon="@drawable/ic_baseline_close_24"
            android:foregroundTint="#00000000"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            android:queryHint="Search..."
            android:searchIcon="@drawable/ic_baseline_search_24"
            android:visibility="visible" />
    </com.google.android.material.card.MaterialCardView>

    <ListView
        android:id="@+id/user_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"/>

</LinearLayout>